// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StartGame /> does not render board when no snapshot 1`] = `
<Styled(MuiBox)>
  <WithStyles(ForwardRef(Typography))
    align="center"
    gutterBottom={true}
    variant="h3"
  >
    gameName
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography))
    align="center"
    color="textSecondary"
    variant="body1"
  >
    Invite others to game:
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography))
    align="center"
    color="textSecondary"
    gutterBottom={true}
    variant="body2"
  >
    http://localhost//join
     
    <CopyToClipboard
      copyText="http://localhost//join"
    />
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    justify="center"
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={5}
    >
      <PlayerList />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Styled(MuiBox)>
`;

exports[`<StartGame /> renders game boards when snapshot is present 1`] = `
<Styled(MuiBox)>
  <WithStyles(ForwardRef(Typography))
    align="center"
    gutterBottom={true}
    variant="h3"
  >
    gameName
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography))
    align="center"
    color="textSecondary"
    variant="body1"
  >
    Invite others to game:
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Typography))
    align="center"
    color="textSecondary"
    gutterBottom={true}
    variant="body2"
  >
    http://localhost//join
     
    <CopyToClipboard
      copyText="http://localhost//join"
    />
  </WithStyles(ForwardRef(Typography))>
  <WithStyles(ForwardRef(Grid))
    container={true}
    justify="center"
    spacing={3}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      md={5}
    >
      <PlayerList />
    </WithStyles(ForwardRef(Grid))>
    <WithStyles(ForwardRef(Grid))
      item={true}
    >
      <Styled(MuiBox)
        display="flex"
        flexDirection="column"
      >
        <WithStyles(ForwardRef(Typography))
          align="center"
          gutterBottom={true}
          variant="body1"
        >
          Here are the boards from that round:
        </WithStyles(ForwardRef(Typography))>
        <OpponentBoardPreview
          includeCurrentPlayer={true}
          initialPlayerIndex={0}
          players={
            Array [
              Object {
                "board": Array [
                  Array [
                    null,
                  ],
                ],
                "gamesWon": 0,
                "hand": Array [],
                "isReady": false,
                "isTopBanana": true,
                "userId": "123",
                "username": "username",
              },
            ]
          }
        />
      </Styled(MuiBox)>
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</Styled(MuiBox)>
`;
